fix: dark mode on Samsung devices

--- a/src/theme.css
+++ b/src/theme.css
@@ -13,6 +13,7 @@
   --container-width: 1240px;
   --container-padding: 24px;
   --section-padding-y: 72px;
+  color-scheme: light;
 }
 
 @media (min-width: 900px) {
